{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 448,
  "lineage": "03c3f274-9129-20ca-1e7a-44b94ae86cad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027500323e56fa2b9",
            "domain": "vpc",
            "id": "eipalloc-027500323e56fa2b9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-145-162-84.compute-1.amazonaws.com",
            "public_ip": "54.145.162.84",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c965c0226beaddc0",
            "domain": "vpc",
            "id": "eipalloc-0c965c0226beaddc0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-171-218-151.compute-1.amazonaws.com",
            "public_ip": "35.171.218.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-int-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:internet-gateway/igw-0de969a7e57cc41ba",
            "id": "igw-0de969a7e57cc41ba",
            "owner_id": "315407446881",
            "tags": {
              "Name": "clixx-vpc-igw"
            },
            "tags_all": {
              "Name": "clixx-vpc-igw"
            },
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_server_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:315407446881:loadbalancer/app/app-server-elb/b228738f16405f83",
            "arn_suffix": "app/app-server-elb/b228738f16405f83",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-server-elb-1509210083.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:315407446881:loadbalancer/app/app-server-elb/b228738f16405f83",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-server-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-038f86457f10074ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004d4b86c67cf8085"
              },
              {
                "subnet_id": "subnet-0ffb2f9463d31a09e"
              }
            ],
            "subnets": [
              "subnet-004d4b86c67cf8085",
              "subnet-0ffb2f9463d31a09e"
            ],
            "vpc_id": "vpc-0e7a48750ccf7e1c7",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:315407446881:listener/app/app-server-elb/b228738f16405f83/aab1f4f5c07fbdf3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:315407446881:targetgroup/my-target-group/74bde89652da016f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:315407446881:listener/app/app-server-elb/b228738f16405f83/aab1f4f5c07fbdf3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:315407446881:loadbalancer/app/app-server-elb/b228738f16405f83",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_server_elb",
            "aws_lb_target_group.target_group_priv",
            "aws_security_group.elb-sg",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:315407446881:targetgroup/my-target-group/74bde89652da016f",
            "arn_suffix": "targetgroup/my-target-group/74bde89652da016f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:315407446881:targetgroup/my-target-group/74bde89652da016f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public-nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027500323e56fa2b9",
            "connectivity_type": "public",
            "id": "nat-0e4e62d9e3ba33574",
            "network_interface_id": "eni-0a3c94f45846f245b",
            "private_ip": "10.0.0.104",
            "public_ip": "54.145.162.84",
            "subnet_id": "subnet-004d4b86c67cf8085"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_subnet.public_az1",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public-nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c965c0226beaddc0",
            "connectivity_type": "public",
            "id": "nat-0a650bba2525867ca",
            "network_interface_id": "eni-0477ebb7445269103",
            "private_ip": "10.0.2.229",
            "public_ip": "35.171.218.151",
            "subnet_id": "subnet-0ffb2f9463d31a09e"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_subnet.public_az2",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main-vpc-routetable_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de969a7e57cc41ba",
            "id": "r-rtb-0562c9dd5760912451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0562c9dd576091245",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-int-gateway",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:route-table/rtb-0c900fef56031d310",
            "id": "rtb-0c900fef56031d310",
            "owner_id": "315407446881",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e4e62d9e3ba33574",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.public-nat1",
            "aws_subnet.public_az1",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:route-table/rtb-013fe3ebbed0074ec",
            "id": "rtb-013fe3ebbed0074ec",
            "owner_id": "315407446881",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a650bba2525867ca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.public-nat2",
            "aws_subnet.public_az2",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mainvpc_rt_public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014283e1aa2d64ea3",
            "route_table_id": "rtb-0562c9dd576091245",
            "subnet_id": "subnet-004d4b86c67cf8085"
          },
          "dependencies": [
            "aws_subnet.public_az1",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mainvpc_rt_public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001f2a77a29c2fcfb",
            "route_table_id": "rtb-0562c9dd576091245",
            "subnet_id": "subnet-0ffb2f9463d31a09e"
          },
          "dependencies": [
            "aws_subnet.public_az2",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039e107337f2dd7ff",
            "route_table_id": "rtb-0c900fef56031d310",
            "subnet_id": "subnet-0033d7298f0b88186"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_nat_gateway.public-nat1",
            "aws_route_table.private1",
            "aws_subnet.app_server_private_az1",
            "aws_subnet.public_az1",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9b5b24913b70548",
            "route_table_id": "rtb-013fe3ebbed0074ec",
            "subnet_id": "subnet-027a431d5a2978f62"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_nat_gateway.public-nat2",
            "aws_route_table.private2",
            "aws_subnet.app_server_private_az2",
            "aws_subnet.public_az2",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:security-group/sg-02f6558d9078c82d0",
            "description": "VPCInstance Security Group",
            "egress": [],
            "id": "sg-02f6558d9078c82d0",
            "ingress": [],
            "name": "VPCInstance-WebDMZ",
            "name_prefix": "",
            "owner_id": "315407446881",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:security-group/sg-09551a3183fb77f38",
            "description": "EFS Security Group",
            "egress": [],
            "id": "sg-09551a3183fb77f38",
            "ingress": [],
            "name": "EFS-sg",
            "name_prefix": "",
            "owner_id": "315407446881",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:security-group/sg-038f86457f10074ae",
            "description": "Load balancer security group",
            "egress": [],
            "id": "sg-038f86457f10074ae",
            "ingress": [],
            "name": "vpc-proj-loadbalancer",
            "name_prefix": "",
            "owner_id": "315407446881",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:security-group/sg-0afedae26e58b1020",
            "description": "RDS Security Group",
            "egress": [],
            "id": "sg-0afedae26e58b1020",
            "ingress": [],
            "name": "RDS-sg",
            "name_prefix": "",
            "owner_id": "315407446881",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-lt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:security-group/sg-0c34f42e300afc45f",
            "description": "Launch Template Security Group",
            "egress": [],
            "id": "sg-0c34f42e300afc45f",
            "ingress": [],
            "name": "LaunchTemplate-SG",
            "name_prefix": "",
            "owner_id": "315407446881",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-mysql-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3584601111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0afedae26e58b1020",
            "security_group_rule_id": "sgr-014c9ffd89b1c5602",
            "self": false,
            "source_security_group_id": "sg-02f6558d9078c82d0",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-server-sg",
            "aws_security_group.rds-instance-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4175057478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09551a3183fb77f38",
            "security_group_rule_id": "sgr-0696e9bac84380c6d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs-nfs-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-2224747497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09551a3183fb77f38",
            "security_group_rule_id": "sgr-0802c316aa36f2293",
            "self": false,
            "source_security_group_id": "sg-0c34f42e300afc45f",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs-sg",
            "aws_security_group.server-lt-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2891930223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02f6558d9078c82d0",
            "security_group_rule_id": "sgr-01a10f7108d90e5c1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-server-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3915329806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-038f86457f10074ae",
            "security_group_rule_id": "sgr-05d561164a2935dd8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-943843171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-038f86457f10074ae",
            "security_group_rule_id": "sgr-0d5fdc54a1bfecb96",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-https-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3600618764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-038f86457f10074ae",
            "security_group_rule_id": "sgr-094794cc0beb10180",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1034061920",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f6558d9078c82d0",
            "security_group_rule_id": "sgr-05829562bebf392e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-server-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-549273573",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f6558d9078c82d0",
            "security_group_rule_id": "sgr-0e8eb5de19ac70420",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-server-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lt-mysql-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1489667018",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0afedae26e58b1020",
            "security_group_rule_id": "sgr-02982f8352c7e61c3",
            "self": false,
            "source_security_group_id": "sg-0c34f42e300afc45f",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-instance-sg",
            "aws_security_group.server-lt-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2074457275",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0afedae26e58b1020",
            "security_group_rule_id": "sgr-04b6605c98211a1b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-instance-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server-lt-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-108572958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c34f42e300afc45f",
            "security_group_rule_id": "sgr-0b7567bfcf10905ed",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server-lt-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server-lt-http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-519486815",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c34f42e300afc45f",
            "security_group_rule_id": "sgr-0628f6e61d5c77f4b",
            "self": false,
            "source_security_group_id": "sg-038f86457f10074ae",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_security_group.server-lt-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server-lt-https-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-971783935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c34f42e300afc45f",
            "security_group_rule_id": "sgr-05325977bb1c31653",
            "self": false,
            "source_security_group_id": "sg-038f86457f10074ae",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_security_group.server-lt-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server-lt-mysql-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3082325050",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c34f42e300afc45f",
            "security_group_rule_id": "sgr-036a3c34eed8d03d7",
            "self": false,
            "source_security_group_id": "sg-0afedae26e58b1020",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-instance-sg",
            "aws_security_group.server-lt-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server-lt-nfs-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-3661100871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c34f42e300afc45f",
            "security_group_rule_id": "sgr-0e4c505c1f3cafeb0",
            "self": false,
            "source_security_group_id": "sg-09551a3183fb77f38",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs-sg",
            "aws_security_group.server-lt-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server-lt-ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1845147266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c34f42e300afc45f",
            "security_group_rule_id": "sgr-0dec462107de30b59",
            "self": false,
            "source_security_group_id": "sg-02f6558d9078c82d0",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-server-sg",
            "aws_security_group.server-lt-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2334709205",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f6558d9078c82d0",
            "security_group_rule_id": "sgr-07878cc9a18a911d3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-server-sg",
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_server_private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:subnet/subnet-0033d7298f0b88186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0033d7298f0b88186",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315407446881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_server_private_subnet_az1-dev"
            },
            "tags_all": {
              "Name": "app_server_private_subnet_az1-dev"
            },
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_server_private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:subnet/subnet-027a431d5a2978f62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027a431d5a2978f62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315407446881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_server_private_subnet_az2-dev"
            },
            "tags_all": {
              "Name": "app_server_private_subnet_az2-dev"
            },
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:subnet/subnet-004d4b86c67cf8085",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004d4b86c67cf8085",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315407446881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az1-dev"
            },
            "tags_all": {
              "Name": "public_subnet_az1-dev"
            },
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:subnet/subnet-0ffb2f9463d31a09e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffb2f9463d31a09e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315407446881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az2-dev"
            },
            "tags_all": {
              "Name": "public_subnet_az2-dev"
            },
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:subnet/subnet-0700e506b562dcb11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0700e506b562dcb11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315407446881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds_private_subnet_az1-dev"
            },
            "tags_all": {
              "Name": "rds_private_subnet_az1-dev"
            },
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:subnet/subnet-0d4090dd5ed3fe60e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4090dd5ed3fe60e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315407446881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds_private_subnet_az2-dev"
            },
            "tags_all": {
              "Name": "rds_private_subnet_az2-dev"
            },
            "vpc_id": "vpc-0e7a48750ccf7e1c7"
          },
          "dependencies": [
            "aws_vpc.main-vpc",
            "data.aws_caller_identity.current_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315407446881:vpc/vpc-0e7a48750ccf7e1c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4718ed825c4d57c",
            "default_route_table_id": "rtb-0562c9dd576091245",
            "default_security_group_id": "sg-0d52310b104ca8958",
            "dhcp_options_id": "dopt-0540daa24c00dd33f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7a48750ccf7e1c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0562c9dd576091245",
            "owner_id": "315407446881",
            "tags": {
              "Backup": "Yes",
              "Name": "main-vpc-dev",
              "OwnerEmail": "omoyeni982@gmail.com",
              "Schedule": "A",
              "Stackteam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "Yes",
              "Name": "main-vpc-dev",
              "OwnerEmail": "omoyeni982@gmail.com",
              "Schedule": "A",
              "Stackteam": "stackcloud9"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current_account"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}